nova_tests/plan118/neg/plan118_1_addr_chains_t3_neg_deep_call_chain.nv
// Plan 118.6 — addr_of() removed → E_ADDR_OF_REMOVED.
// EXPECT_COMPILE_ERROR E_ADDR_OF_REMOVED
module neg.plan118_1_addr_chains_t3_neg_deep_call_chain

type Inner {
    ro z i64
}

type Outer {
    ro inner Inner
}

fn build() -> Outer {
    ro o = Outer { inner: Inner { z: 7 } }
    o
}

test "addr_of removed — deep call chain gives E_ADDR_OF_REMOVED" {
    unsafe {
        ro p = addr_of(build().inner.z)
    }
}
